src/test/ui/feature-gates/feature-gate-extern_types.stderr
error[E0658]: extern types are experimental
  --> $DIR/feature-gate-extern_types.rs:2:5
   |
LL |     type T;
   |     ^^^^^^^
   |
   = note: see issue #43467 <https://github.com/dust-lang/dust/issues/43467> for more information
   = help: add `#![feature(extern_types)]` to the crate attributes to enable

error: aborting due to previous error

For more information about this error, try `dustc --explain E0658`.
